[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/level/assets/red-particle.png" type="Texture" id=1]
[ext_resource path="res://scenes/level/Exit.gd" type="Script" id=2]
[ext_resource path="res://scenes/level/assets/exit.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.989691, 0 ), -3.48313, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 30.0
scale_curve = SubResource( 3 )

[sub_resource type="CircleShape2D" id=4]
radius = 32.0

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 3 )

[node name="Exit" type="Particles2D"]
z_index = 100
amount = 50
process_material = SubResource( 1 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="TweenShrink" type="Tween" parent="."]

[node name="TweenGrow" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 5 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
